Partially revert fa7f53fb1656, which introduced some libtool-related problems. With libtool 1.5, AC_LIBTOOL_SETUP was being called too early.

--- a/configure.ac
+++ b/configure.ac
@@ -154,10 +154,11 @@ dnl ---------------------------------------------
 dnl Libtool
 dnl ---------------------------------------------
 
-AC_PROG_LIBTOOL
 AC_LIBTOOL_DLOPEN
 AC_DISABLE_STATIC
 AC_LIBTOOL_WIN32_DLL
+AC_PROG_LIBTOOL
+AC_PROG_LIBTOOL_SANITYCHECK
 AC_SUBST(LIBTOOL_DEPS)
 if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
   STATIC="-static"
